--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,6 +320,7 @@ jobs:
             echo $SSH_HOST_PUBLIC_KEY >> ~/.ssh/known_hosts
             git clone $AMPLIFY_JS_SAMPLES_STAGING_URL
             cd amplify-js-samples-staging
+            git checkout use-native-shadow-api
             yarn
       - save_cache:
           key: amplify-js-{{ .Branch }}-{{ checksum "amplify-js-samples-staging/yarn.lock" }}
@@ -621,48 +622,6 @@ jobs:
           spec: << parameters.scenario >>
           browser: firefox
 
-  deploy:
-    executor: macos-executor
-    working_directory: ~/amplify-js
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: 'Publish to Amplify Package'
-          command: |
-            if [ -z "$CIRCLE_PULL_REQUEST" ]; then
-              echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-              npm whoami
-              git config --global user.email $GITHUB_EMAIL
-              git config --global user.name $GITHUB_USER
-              git status
-              git --no-pager diff
-              yarn publish:$CIRCLE_BRANCH
-            else
-              echo "Skipping deploy."
-            fi
-
-  post_release:
-    executor: build-executor
-    steps:
-      - attach_workspace:
-          at: /root
-      - restore_cache:
-          keys:
-            - amplify-ssh-deps-{{ .Branch }}
-            - amplify-ssh-deps
-      - run:
-          name: 'Post-release steps'
-          command: |
-            git config --global user.email $GITHUB_EMAIL
-            git config --global user.name $GITHUB_USER
-            git pull origin release
-            yarn workspace @aws-amplify/core build
-            git add ./packages/core/src/Platform/version.ts
-            git commit -m "chore(release): update version.ts [ci skip]"
-            git push origin release
-            git push origin release:main
-
 releasable_branches: &releasable_branches
   branches:
     only:
@@ -671,6 +630,7 @@ releasable_branches: &releasable_branches
       - ui-components/main
       - 1.0-stable
       - native
+      - test-shadow-dom-changes
 
 test_browsers: &test_browsers
   browser: [chrome, firefox]
@@ -826,30 +786,3 @@ workflows:
           matrix:
             parameters:
               <<: *datastore_auth_scenarios
-      - deploy:
-          filters:
-            <<: *releasable_branches
-          requires:
-            - unit_test
-            - integ_react_predictions
-            - integ_react_datastore
-            - integ_react_storage
-            - integ_react_storage_ui
-            - integ_react_interactions
-            - integ_angular_interactions
-            - integ_vue_interactions
-            - integ_amazon_cognito_identity_js
-            - integ_react_auth
-            - integ_angular_auth
-            - integ_vue_auth
-            - integ_rn_ios_storage
-            - integ_rn_ios_push_notifications
-            - integ_rn_android_storage
-            - integ_datastore_auth
-      - post_release:
-          filters:
-            branches:
-              only:
-                - release
-          requires:
-            - deploy
